added canvas with lenna

--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title></title>
-<head></head>
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="logic.js"></script>
+<style type="text/css">
+body{
+	width:800px;
+	height:800px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align:center;
+}
+canvas{
+	outline:5px solid #000;
+}
+</style>
+</head>
 <body>
-	Hello World!
+	<div>
+		<canvas id="canvas">
+			Ihr Browser unterstützt kein HTML5.
+		</canvas>
+	</div>
 </body>
 </html>
