added two other canvas and views

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     }
     canvas{
       outline: 5px solid #000;
+      margin: 10px;
     }
   </style>
 
@@ -26,8 +27,14 @@
 
 <body>
 	
-  <div>
-		<canvas id="canvas">
+	<div>
+		<canvas id="canvas1">
+			Ihr Browser unterstützt kein HTML5.
+		</canvas>
+		<canvas id="canvas2">
+			Ihr Browser unterstützt kein HTML5.
+		</canvas>
+		<canvas id="canvas3">
 			Ihr Browser unterstützt kein HTML5.
 		</canvas>
 	</div>
