refactoring and adding some titles

--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	
-  <title></title>
+  <title>Selective Bitplane Encryption</title>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script type="text/javascript" src="logic.js"></script>
-  
-	<style type="text/css">
-    body{
-    	width: 600px;
-			margin-left: auto;
-			margin-right: auto;
-			text-align: center;
-    }
-    canvas{
-			outline: 5px solid #000;
-			margin: 10px;
-    }
-  </style>
+  <script type="text/javascript" src="scripts/logic.js"></script>
+	<link rel="stylesheet" href="css/main.css"/>
 
 </head>
 <body>
 	
+	<h1>Selective Bitplane Encryption</h1>
 	<div>
 		<canvas id="canvas1">
 			Ihr Browser unterstützt kein HTML5.
@@ -33,6 +22,7 @@
 			Ihr Browser unterstützt kein HTML5.
 		</canvas>
 	</div>
-
+	<h3>© Andreas Fritsch und Lukas Wanko</h3>
+	
 </body>
 </html>
