try to get buttons to work

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 				Ihr Browser unterstützt kein HTML5.
 			</canvas>
 			<p>
-				Anzahl der Bits <input type="text" name="value2"/>
-				MSB <input type="radio" name="significantbit2" value="msb"/>
-				LSB <input type="radio" name="significantbit2" value="lsb"/>
-				<input type="button" name="submit" value="Berechnen!" onclick=""/>
+				Anzahl der Bits <input type="text" name="value2" value="1"/>
+				MSB <input type="radio" name="significantbit2" value="msb" checked="checked"/>
+				LSB <input type="radio" name="significantbit2" value="lsb" />
+				<input type="button" name="submit2" value="Berechnen!" onclick="processImage(this);"/>
 			</p>
 		</div>
 		
@@ -35,10 +35,10 @@
 				Ihr Browser unterstützt kein HTML5.
 			</canvas>
 			<p>
-				Anzahl der Bits <input type="text" name="value3"/>
-				MSB <input type="radio" name="significantbit3" value="msb"/>
+				Anzahl der Bits <input type="text" name="value3" value="4"/>
+				MSB <input type="radio" name="significantbit3" value="msb" checked="checked"/>
 				LSB <input type="radio" name="significantbit3" value="lsb"/>
-				<input type="button" name="submit" value="Berechnen!" onclick=""/>
+				<input type="button" name="submit3" value="Berechnen!" onclick="processImage();"/>
 			</p>
 		</div>
 		<h3>© Andreas Fritsch und Lukas Wanko</h3>
