added input logic

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				Anzahl der Bits <input type="text" name="value2" value="1"/>
 				MSB <input type="radio" name="significantbit2" value="msb" checked="checked"/>
 				LSB <input type="radio" name="significantbit2" value="lsb" />
-				<input type="button" name="submit2" value="Berechnen!" onclick="processImage(this);"/>
+				<input type="button" name="submit2" value="Berechnen!"/>
 			</p>
 		</div>
 		
@@ -38,7 +38,7 @@
 				Anzahl der Bits <input type="text" name="value3" value="4"/>
 				MSB <input type="radio" name="significantbit3" value="msb" checked="checked"/>
 				LSB <input type="radio" name="significantbit3" value="lsb"/>
-				<input type="button" name="submit3" value="Berechnen!" onclick="processImage();"/>
+				<input type="button" name="submit3" value="Berechnen!"/>
 			</p>
 		</div>
 		<h3>© Andreas Fritsch und Lukas Wanko</h3>
