added black and white function

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				Ihr Browser unterstützt kein HTML5.
 			</canvas>
 			<p>
+				S/W <input type="checkbox" name="sw2"/>
 				Anzahl der Bits <input type="text" name="value2" value="1"/>
 				MSB <input type="radio" name="significantbit2" value="msb" checked="checked"/>
 				LSB <input type="radio" name="significantbit2" value="lsb" />
@@ -35,6 +36,7 @@
 				Ihr Browser unterstützt kein HTML5.
 			</canvas>
 			<p>
+				S/W <input type="checkbox" name="sw3"/>
 				Anzahl der Bits <input type="text" name="value3" value="4"/>
 				MSB <input type="radio" name="significantbit3" value="msb" checked="checked"/>
 				LSB <input type="radio" name="significantbit3" value="lsb"/>
