added function to get allways a 8bit array

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	
   <title>Selective Bitplane Encryption</title>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script type="text/javascript" src="scripts/jquery.js"></script>
   <script type="text/javascript" src="scripts/logic.js"></script>
 	<link rel="stylesheet" href="css/main.css"/>
 
