working on bitplane function

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	
   <title>Selective Bitplane Encryption</title>
   <script type="text/javascript" src="scripts/jquery.js"></script>
+  <script type="text/javascript" src="scripts/jaes.js"></script>
   <script type="text/javascript" src="scripts/logic.js"></script>
 	<link rel="stylesheet" href="css/main.css"/>
 
@@ -28,6 +29,18 @@
 				MSB <input type="radio" name="significantbit2" value="msb" checked="checked"/>
 				LSB <input type="radio" name="significantbit2" value="lsb" />
 				<input type="button" name="submit2" value="Berechnen!"/>
+			</p>
+			<p>
+				Bitplane S/W: 
+				0<input type="radio" name="bitplane2" value="0"/>
+				1<input type="radio" name="bitplane2" value="1"/>
+				2<input type="radio" name="bitplane2" value="2"/>
+				3<input type="radio" name="bitplane2" value="3"/>
+				4<input type="radio" name="bitplane2" value="4"/>
+				5<input type="radio" name="bitplane2" value="5"/>
+				6<input type="radio" name="bitplane2" value="6"/>
+				7<input type="radio" name="bitplane2" value="7"/>
+				<input type="button" name="bitplane2" value="Berechnen!"/>
 			</p>
 		</div>
 		
