--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
 				LSB <input type="radio" name="significantbit3" value="lsb"/>
 				<input type="button" name="submit3" value="Berechnen!"/>
 			</p>
+			<p>
+				Bitplane S/W: 
+				0<input type="radio" name="bitplane3" value="0"/>
+				1<input type="radio" name="bitplane3" value="1"/>
+				2<input type="radio" name="bitplane3" value="2"/>
+				3<input type="radio" name="bitplane3" value="3"/>
+				4<input type="radio" name="bitplane3" value="4"/>
+				5<input type="radio" name="bitplane3" value="5"/>
+				6<input type="radio" name="bitplane3" value="6"/>
+				7<input type="radio" name="bitplane3" value="7"/>
+				<input type="button" name="bitplane3" value="Berechnen!"/>
+			</p>
 		</div>
 		<h3>© Andreas Fritsch und Lukas Wanko</h3>
 	</div>
