beginning of implementation replacement attack

--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
   				<input type="button" name="bitplane2" value="Calculate!"/>
   			</p>
       </fieldset>
+      <fieldset>
+        <legend>Replacement-Attack</legend>
+  			<p>
+  				Bitplane B/W: 
+  				0<input type="radio" name="replacementAttackBitplane2" value="0" checked="checked"/>
+  				1<input type="radio" name="replacementAttackBitplane2" value="1"/>
+  				2<input type="radio" name="replacementAttackBitplane2" value="2"/>
+  				3<input type="radio" name="replacementAttackBitplane2" value="3"/>
+  				4<input type="radio" name="replacementAttackBitplane2" value="4"/>
+  				5<input type="radio" name="replacementAttackBitplane2" value="5"/>
+  				6<input type="radio" name="replacementAttackBitplane2" value="6"/>
+  				7<input type="radio" name="replacementAttackBitplane2" value="7"/>
+  			</p>
+  			<p>
+  				Method:
+  				Neighbour-Pixel<input type="radio" name="replacementAttackMode2" value="neighbour" checked="checked"/>
+  				All 0<input type="radio" name="replacementAttackMode2" value="0"/>
+  				All 1<input type="radio" name="replacementAttackMode2" value="1"/>
+  				<input type="button" name="replacementAttack2" value="Calculate!"/>
+  			</p>
+      </fieldset>
 		</div>
 		
 		<div id="container3">
