checkboxes for bitplanes selection

--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
       <fieldset>
         <legend>Encryption</legend>
   			<p>
-  				B/W <input type="checkbox" name="sw2"/>
-  				Number of Bits <input type="text" name="value2" value="1"/>
-  				MSB <input type="radio" name="significantbit2" value="msb" checked="checked"/>
-  				LSB <input type="radio" name="significantbit2" value="lsb" />
+  				B/W <input type="checkbox" name="sw2" checked="checked"/>
+  				Bitplane(s)
+  				0 <input type="checkbox" name="2bit0" checked="checked"/>
+  				1 <input type="checkbox" name="2bit1" />
+  				2 <input type="checkbox" name="2bit2" />
+  				3 <input type="checkbox" name="2bit3" />
+  				4 <input type="checkbox" name="2bit4" />
+  				5 <input type="checkbox" name="2bit5" />
+  				6 <input type="checkbox" name="2bit6" />
+  				7 <input type="checkbox" name="2bit7" />
   				<input type="button" name="submit2" value="Calculate!"/>
   			</p>
       </fieldset>
@@ -85,10 +91,16 @@
 			<fieldset>
         <legend>Encryption</legend>
         <p>
-  				B/W <input type="checkbox" name="sw3"/>
-  				Number of Bits <input type="text" name="value3" value="4"/>
-  				MSB <input type="radio" name="significantbit3" value="msb" checked="checked"/>
-  				LSB <input type="radio" name="significantbit3" value="lsb"/>
+  				B/W <input type="checkbox" name="sw2" checked="checked"/>
+          Bitplane(s)
+          0 <input type="checkbox" name="3bit0" checked="checked"/>
+          1 <input type="checkbox" name="3bit1" />
+          2 <input type="checkbox" name="3bit2" />
+          3 <input type="checkbox" name="3bit3" />
+          4 <input type="checkbox" name="3bit4" />
+          5 <input type="checkbox" name="3bit5" />
+          6 <input type="checkbox" name="3bit6" />
+          7 <input type="checkbox" name="3bit7" />
   				<input type="button" name="submit3" value="Calculate!"/>
   			</p>
       </fieldset>
