--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <legend>Encryption</legend>
   			<p>
   				B/W <input type="checkbox" name="sw2" checked="checked"/>
-  				Bitplane(s)
-  				0 <input type="checkbox" name="2bit0" checked="checked"/>
-  				1 <input type="checkbox" name="2bit1" />
-  				2 <input type="checkbox" name="2bit2" />
-  				3 <input type="checkbox" name="2bit3" />
-  				4 <input type="checkbox" name="2bit4" />
-  				5 <input type="checkbox" name="2bit5" />
+  				Bitplane(s):
+  				7 <input type="checkbox" name="2bit7" checked="checked"/>
   				6 <input type="checkbox" name="2bit6" />
-  				7 <input type="checkbox" name="2bit7" />
+  				5 <input type="checkbox" name="2bit5" />
+  				4 <input type="checkbox" name="2bit4" />
+  				3 <input type="checkbox" name="2bit3" />
+  				2 <input type="checkbox" name="2bit2" />
+  				1 <input type="checkbox" name="2bit1" />
+  				0 <input type="checkbox" name="2bit0" />
   				<input type="button" name="submit2" value="Calculate!"/>
   			</p>
       </fieldset>
@@ -50,14 +50,14 @@
   			</p>
   			<p>
   				Bitplane B/W: 
-  				0<input type="radio" name="bitplane2" value="0" checked="checked"/>
-  				1<input type="radio" name="bitplane2" value="1"/>
-  				2<input type="radio" name="bitplane2" value="2"/>
-  				3<input type="radio" name="bitplane2" value="3"/>
-  				4<input type="radio" name="bitplane2" value="4"/>
-  				5<input type="radio" name="bitplane2" value="5"/>
-  				6<input type="radio" name="bitplane2" value="6"/>
   				7<input type="radio" name="bitplane2" value="7"/>
+  				6<input type="radio" name="bitplane2" value="6"/>
+  				5<input type="radio" name="bitplane2" value="5"/>
+  				4<input type="radio" name="bitplane2" value="4"/>
+  				3<input type="radio" name="bitplane2" value="3"/>
+  				2<input type="radio" name="bitplane2" value="2"/>
+  				1<input type="radio" name="bitplane2" value="1"/>
+  				0<input type="radio" name="bitplane2" value="0"/>
   				<input type="button" name="bitplane2" value="Calculate!"/>
   			</p>
       </fieldset>
@@ -65,14 +65,14 @@
         <legend>Replacement-Attack</legend>
   			<p>
   				Bitplane B/W: 
-  				0<input type="radio" name="replacementAttackBitplane2" value="0" checked="checked"/>
-  				1<input type="radio" name="replacementAttackBitplane2" value="1"/>
-  				2<input type="radio" name="replacementAttackBitplane2" value="2"/>
-  				3<input type="radio" name="replacementAttackBitplane2" value="3"/>
-  				4<input type="radio" name="replacementAttackBitplane2" value="4"/>
-  				5<input type="radio" name="replacementAttackBitplane2" value="5"/>
-  				6<input type="radio" name="replacementAttackBitplane2" value="6"/>
-  				7<input type="radio" name="replacementAttackBitplane2" value="7"/>
+          7<input type="checkbox" name="2replacementAttackBitplane7"/>
+          6<input type="checkbox" name="2replacementAttackBitplane6"/>
+          5<input type="checkbox" name="2replacementAttackBitplane5"/>
+          4<input type="checkbox" name="2replacementAttackBitplane4"/>
+          3<input type="checkbox" name="2replacementAttackBitplane3"/>
+          2<input type="checkbox" name="2replacementAttackBitplane2"/>
+          1<input type="checkbox" name="2replacementAttackBitplane1"/>
+          0<input type="checkbox" name="2replacementAttackBitplane0"/>
   			</p>
   			<p>
   				Method:
@@ -91,16 +91,16 @@
 			<fieldset>
         <legend>Encryption</legend>
         <p>
-  				B/W <input type="checkbox" name="sw2" checked="checked"/>
-          Bitplane(s)
-          0 <input type="checkbox" name="3bit0" checked="checked"/>
-          1 <input type="checkbox" name="3bit1" />
-          2 <input type="checkbox" name="3bit2" />
-          3 <input type="checkbox" name="3bit3" />
-          4 <input type="checkbox" name="3bit4" />
-          5 <input type="checkbox" name="3bit5" />
+  				B/W <input type="checkbox" name="sw3" checked="checked"/>
+          Bitplane(s):
+          7 <input type="checkbox" name="3bit7" checked="checked"/>
           6 <input type="checkbox" name="3bit6" />
-          7 <input type="checkbox" name="3bit7" />
+          5 <input type="checkbox" name="3bit5" />
+          4 <input type="checkbox" name="3bit4" />
+          3 <input type="checkbox" name="3bit3" />
+          2 <input type="checkbox" name="3bit2" />
+          1 <input type="checkbox" name="3bit1" />
+          0 <input type="checkbox" name="3bit0" />
   				<input type="button" name="submit3" value="Calculate!"/>
   			</p>
       </fieldset>
@@ -115,14 +115,14 @@
         </p>
   			<p>
   				Bitplane B/W: 
-  				0<input type="radio" name="bitplane3" value="0" checked="checked"/>
-  				1<input type="radio" name="bitplane3" value="1"/>
-  				2<input type="radio" name="bitplane3" value="2"/>
-  				3<input type="radio" name="bitplane3" value="3"/>
-  				4<input type="radio" name="bitplane3" value="4"/>
-  				5<input type="radio" name="bitplane3" value="5"/>
+  				7<input type="radio" name="bitplane3" value="7" checked="checked"/>
   				6<input type="radio" name="bitplane3" value="6"/>
-  				7<input type="radio" name="bitplane3" value="7"/>
+  				5<input type="radio" name="bitplane3" value="5"/>
+  				4<input type="radio" name="bitplane3" value="4"/>
+  				3<input type="radio" name="bitplane3" value="3"/>
+  				2<input type="radio" name="bitplane3" value="2"/>
+  				1<input type="radio" name="bitplane3" value="1"/>
+  				0<input type="radio" name="bitplane3" value="0"/>
   				<input type="button" name="bitplane3" value="Calculate!"/>
   			</p>
       </fieldset>
@@ -130,14 +130,14 @@
         <legend>Replacement-Attack</legend>
         <p>
           Bitplane B/W: 
-          0<input type="radio" name="replacementAttackBitplane3" value="0" checked="checked"/>
-          1<input type="radio" name="replacementAttackBitplane3" value="1"/>
-          2<input type="radio" name="replacementAttackBitplane3" value="2"/>
-          3<input type="radio" name="replacementAttackBitplane3" value="3"/>
-          4<input type="radio" name="replacementAttackBitplane3" value="4"/>
-          5<input type="radio" name="replacementAttackBitplane3" value="5"/>
-          6<input type="radio" name="replacementAttackBitplane3" value="6"/>
-          7<input type="radio" name="replacementAttackBitplane3" value="7"/>
+          7<input type="checkbox" name="3replacementAttackBitplane7"/>
+          6<input type="checkbox" name="3replacementAttackBitplane6"/>
+          5<input type="checkbox" name="3replacementAttackBitplane5"/>
+          4<input type="checkbox" name="3replacementAttackBitplane4"/>
+          3<input type="checkbox" name="3replacementAttackBitplane3"/>
+          2<input type="checkbox" name="3replacementAttackBitplane2"/>
+          1<input type="checkbox" name="3replacementAttackBitplane1"/>
+          0<input type="checkbox" name="3replacementAttackBitplane0"/>
         </p>
         <p>
           Method:
@@ -148,7 +148,7 @@
         </p>
       </fieldset>
 		</div>
-		<h3>© Andreas Fritsch und Lukas Wanko</h3>
+		<h3>ï¿½ Andreas Fritsch und Lukas Wanko</h3>
 	</div>
 	
 </body>
