--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <legend>Replacement-Attack</legend>
   			<p>
   				Bitplane B/W: 
-          7<input type="checkbox" name="2replacementAttackBitplane7"/>
+          7<input type="checkbox" name="2replacementAttackBitplane7" checked="checked"/>
           6<input type="checkbox" name="2replacementAttackBitplane6"/>
           5<input type="checkbox" name="2replacementAttackBitplane5"/>
           4<input type="checkbox" name="2replacementAttackBitplane4"/>
@@ -76,7 +76,8 @@
   			</p>
   			<p>
   				Method:
-  				Neighbour-Pixel<input type="radio" name="replacementAttackMode2" value="neighbour" checked="checked"/>
+  				Neighbours<input type="radio" name="replacementAttackMode2" value="neighbour" checked="checked"/>
+          Reconstruction<input type="radio" name="replacementAttackMode2" value="replacement"/>
   				All 0<input type="radio" name="replacementAttackMode2" value="0"/>
   				All 1<input type="radio" name="replacementAttackMode2" value="1"/>
   				<input type="button" name="replacementAttack2" value="Calculate!"/>
@@ -130,7 +131,7 @@
         <legend>Replacement-Attack</legend>
         <p>
           Bitplane B/W: 
-          7<input type="checkbox" name="3replacementAttackBitplane7"/>
+          7<input type="checkbox" name="3replacementAttackBitplane7" checked="checked"/>
           6<input type="checkbox" name="3replacementAttackBitplane6"/>
           5<input type="checkbox" name="3replacementAttackBitplane5"/>
           4<input type="checkbox" name="3replacementAttackBitplane4"/>
@@ -141,7 +142,8 @@
         </p>
         <p>
           Method:
-          Neighbour-Pixel<input type="radio" name="replacementAttackMode3" value="neighbour" checked="checked"/>
+          Neighbours<input type="radio" name="replacementAttackMode3" value="neighbour" checked="checked"/>
+          Reconstruction<input type="radio" name="replacementAttackMode3" value="replacement"/>
           All 0<input type="radio" name="replacementAttackMode3" value="0"/>
           All 1<input type="radio" name="replacementAttackMode3" value="1"/>
           <input type="button" name="replacementAttack3" value="Calculate!"/>
