--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   			<p>
   				Method:
   				Neighbours<input type="radio" name="replacementAttackMode2" value="neighbour" checked="checked"/>
-          Reconstruction<input type="radio" name="replacementAttackMode2" value="replacement"/>
+          Reconstruction<input type="radio" name="replacementAttackMode2" value="reconstruction"/>
   				All 0<input type="radio" name="replacementAttackMode2" value="0"/>
   				All 1<input type="radio" name="replacementAttackMode2" value="1"/>
   				<input type="button" name="replacementAttack2" value="Calculate!"/>
@@ -143,7 +143,7 @@
         <p>
           Method:
           Neighbours<input type="radio" name="replacementAttackMode3" value="neighbour" checked="checked"/>
-          Reconstruction<input type="radio" name="replacementAttackMode3" value="replacement"/>
+          Reconstruction<input type="radio" name="replacementAttackMode3" value="reconstruction"/>
           All 0<input type="radio" name="replacementAttackMode3" value="0"/>
           All 1<input type="radio" name="replacementAttackMode3" value="1"/>
           <input type="button" name="replacementAttack3" value="Calculate!"/>
