--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <fieldset>
         <legend>Bitplane</legend>
   			<p>
-  				Color Mode: 
+  				Current Data <input type="checkbox" name="currentdata2"/>
+          Color Mode: 
   				Red<input type="radio" name="colormode2" value="red"/>
   				Blue<input type="radio" name="colormode2" value="blue"/>
   				Green<input type="radio" name="colormode2" value="green"/>
@@ -108,6 +109,7 @@
       <fieldset>
         <legend>Bitplane</legend>
         <p>
+          Current Data <input type="checkbox" name="currentdata3"/>
           Color Mode: 
           Red<input type="radio" name="colormode3" value="red"/>
           Blue<input type="radio" name="colormode3" value="blue"/>
