now reconstruction should work

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				Your Browser does not support HTML5.
 			</canvas>
       <fieldset>
-        <legend>Encryption</legend>
+        <legend><b>Encryption</b></legend>
   			<p>
   				B/W <input type="checkbox" name="sw2" checked="checked"/>
   				Bitplane(s):
@@ -35,12 +35,12 @@
   				3 <input type="checkbox" name="2bit3" />
   				2 <input type="checkbox" name="2bit2" />
   				1 <input type="checkbox" name="2bit1" />
-  				0 <input type="checkbox" name="2bit0" />
+  				0 <input type="checkbox" name="2bit0" /><br><br>
   				<input type="button" name="submit2" value="Calculate!"/>
   			</p>
       </fieldset>
       <fieldset>
-        <legend>Bitplane</legend>
+        <legend><b>Bitplane</b></legend>
   			<p>
   				Current Data <input type="checkbox" name="currentdata2"/>
           Color Mode: 
@@ -63,7 +63,7 @@
   			</p>
       </fieldset>
       <fieldset>
-        <legend>Replacement-Attack</legend>
+        <legend><b>Attack</b></legend>
   			<p>
   				Bitplane B/W: 
           7<input type="checkbox" name="2replacementAttackBitplane7" checked="checked"/>
@@ -76,12 +76,11 @@
           0<input type="checkbox" name="2replacementAttackBitplane0"/>
   			</p>
   			<p>
-  				Method:
+  				Replacement 0<input type="radio" name="replacementAttackMode2" value="0"/>
+  				Replacement 1<input type="radio" name="replacementAttackMode2" value="1"/><br>
   				Neighbours<input type="radio" name="replacementAttackMode2" value="neighbour" checked="checked"/>
           Reconstruction<input type="radio" name="replacementAttackMode2" value="reconstruction"/>
-  				All 0<input type="radio" name="replacementAttackMode2" value="0"/>
-  				All 1<input type="radio" name="replacementAttackMode2" value="1"/>
-  				<input type="button" name="replacementAttack2" value="Calculate!"/>
+  				<br><br><input type="button" name="replacementAttack2" value="Calculate!"/>
   			</p>
       </fieldset>
 		</div>
@@ -91,7 +90,7 @@
 				Your Browser does not support HTML5.
 			</canvas>
 			<fieldset>
-        <legend>Encryption</legend>
+        <legend><b>Encryption</b></legend>
         <p>
   				B/W <input type="checkbox" name="sw3" checked="checked"/>
           Bitplane(s):
@@ -102,12 +101,12 @@
           3 <input type="checkbox" name="3bit3" />
           2 <input type="checkbox" name="3bit2" />
           1 <input type="checkbox" name="3bit1" />
-          0 <input type="checkbox" name="3bit0" />
+          0 <input type="checkbox" name="3bit0" /><br><br>
   				<input type="button" name="submit3" value="Calculate!"/>
   			</p>
       </fieldset>
       <fieldset>
-        <legend>Bitplane</legend>
+        <legend><b>Bitplane</b></legend>
         <p>
           Current Data <input type="checkbox" name="currentdata3"/>
           Color Mode: 
@@ -130,7 +129,7 @@
   			</p>
       </fieldset>
       <fieldset>
-        <legend>Replacement-Attack</legend>
+        <legend><b>Attack</b></legend>
         <p>
           Bitplane B/W: 
           7<input type="checkbox" name="3replacementAttackBitplane7" checked="checked"/>
@@ -143,12 +142,11 @@
           0<input type="checkbox" name="3replacementAttackBitplane0"/>
         </p>
         <p>
-          Method:
-          Neighbours<input type="radio" name="replacementAttackMode3" value="neighbour" checked="checked"/>
+          Replacement 0<input type="radio" name="replacementAttackMode3" value="0"/>
+          Replacement 1<input type="radio" name="replacementAttackMode3" value="1"/><br>
+          Neighbour<input type="radio" name="replacementAttackMode3" value="neighbour" checked="checked"/>
           Reconstruction<input type="radio" name="replacementAttackMode3" value="reconstruction"/>
-          All 0<input type="radio" name="replacementAttackMode3" value="0"/>
-          All 1<input type="radio" name="replacementAttackMode3" value="1"/>
-          <input type="button" name="replacementAttack3" value="Calculate!"/>
+          <br><br><input type="button" name="replacementAttack3" value="Calculate!"/>
         </p>
       </fieldset>
 		</div>
